[package]
name = "regex-dfa-gen"
version = "0.1.1"
authors = ["dnailz <dnailzb@outlook.com>"]
edition = "2018"
license = "MIT"
description = "A proc_macro lexer generator. using `enum`-like syntax."
homepage = "https://github.com/DnailZ/enum-lexer"
documentation = "https://docs.rs/enum-lexer"
repository = "https://github.com/DnailZ/enum-lexer"
readme = "README.md"
keywords = ["lexer", "dfa", "regex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sorted-vec = "0.3.7"
dot = "0.1.4"
env_logger = "0.7.1"
thiserror = "1.0.20"